Moves external storage to private storage
This move will make it so that uninstalling the app will free data.